plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.5'
}

group = 'logisimit'
version = 'TTL7402'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
}

repositories {
    mavenCentral()
    maven {
        url "https://repo.clojars.org/"
    }
}

dependencies {
    // Remote dependencies
    implementation 'com.google.code.gson:gson:2.8.9'
    
    // Local jars in libs directory (recursive)
    implementation fileTree(dir: 'libs', include: ['**/*.jar'])
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
            exclude 'resources/**'
        }
        resources {
            // Standard resources are handled by processResources for custom mapping
            srcDirs = [] 
        }
    }
}

processResources {
    from('src/main/java/resources/logisim') {
        into 'resources/logisim'
    }
    from('doc') {
        into 'doc'
    }
}

shadowJar {
    archiveBaseName.set('Logisim')
    archiveClassifier.set('all')
    archiveVersion.set('')
    
    manifest {
        attributes(
            'Main-Class': 'com.cburch.logisim.Main'
        )
    }
}

tasks.named('jar') {
    manifest {
        attributes(
            'Main-Class': 'com.cburch.logisim.Main'
        )
    }
}
